examples/test/testpolicy19891.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19891
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key0: value0
      key46: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value0
          key21: value29
          key40: value41
      podSelector:
        matchLabels:
          key22: value20
          key18: value38
